@@ -88,6 +88,7 @@ gerritclient =
     plugin_reload=gerritclient.commands.plugin:PluginReload
     plugin_show=gerritclient.commands.plugin:PluginShow
     project_branch_create=gerritclient.commands.project:ProjectBranchCreate
+    project_branch_delete=gerritclient.commands.project:ProjectBranchDelete
     project_branch_list=gerritclient.commands.project:ProjectBranchList
     project_branch_show=gerritclient.commands.project:ProjectBranchShow
     project_create=gerritclient.commands.project:ProjectCreate
